--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>LTRBox Admin Panel</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -38,8 +38,8 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a ui-sref="home">Home</a></li>
-              <li><a ui-sref="about">About</a></li>
+              <li><a ui-sref="home">Features</a></li>
+              <li><a ui-sref="sets">Feature Sets</a></li>
             </ul>
           </div>
         </div>
@@ -52,7 +52,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p>2017</p>
       </div>
     </div>
 
@@ -84,8 +84,11 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/resources/resources.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/sets.js"></script>
         <script src="scripts/controllers/about.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
