--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
             <ul class="nav navbar-nav">
               <li><a ui-sref="home">Features</a></li>
               <li><a ui-sref="sets">Feature Sets</a></li>
+              <li><a ui-sref="models">Models</a></li>
             </ul>
           </div>
         </div>
@@ -86,6 +87,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/resources/resources.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/models.js"></script>
         <script src="scripts/controllers/sets.js"></script>
         <script src="scripts/controllers/about.js"></script>
 
