--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li><a ui-sref="home">Features</a></li>
+              <li><a ui-sref="features">Features</a></li>
               <li><a ui-sref="sets">Feature Sets</a></li>
               <li><a ui-sref="models">Models</a></li>
             </ul>
