--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
               <li><a ui-sref="features">Features</a></li>
               <li><a ui-sref="sets">Feature Sets</a></li>
               <li><a ui-sref="models">Models</a></li>
+              <li><a ui-sref="evaluate">Evaluation</a></li>
             </ul>
           </div>
         </div>
